add some features and fix some bugs

--- a/app/src/main/res/drawable/ic_baseline_check_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_check_24.xml
@@ -6,5 +6,7 @@
     android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@android:color/white"
+      android:strokeColor="@color/black"
+      android:strokeWidth="2"
       android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z"/>
 </vector>
