--- a/app/src/main/res/layout/fragment_detail_cargo.xml
+++ b/app/src/main/res/layout/fragment_detail_cargo.xml
@@ -47,25 +47,21 @@
                     tools:visibility="visible"
                     style="@style/relSearchMainEdi">
 
-                    <ImageView
-                        android:id="@+id/searchIcon"
-                        android:layout_width="@dimen/searchImg"
-                        android:layout_height="@dimen/searchImg"
-                        android:padding="@dimen/searchImgPadding"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/png_search" />
+
 
                     <EditText
                         android:id="@+id/searchEdi"
                         style="@style/searchMainEdi"
-                        android:hint="@string/customerName"
+                        android:clickable="true"
+                        android:focusable="false"
+                        android:hint="@string/location_code"
                         android:layout_toStartOf="@+id/clearImg"
-                        android:layout_toEndOf="@+id/searchIcon" />
+                        />
 
                     <ImageView
                         android:id="@+id/clearImg"
+                        android:clickable="true"
+                        android:focusable="true"
                         style="@style/imgClose" />
                 </RelativeLayout>
 
