--- a/app/src/main/res/layout/pattern_cargo_detail.xml
+++ b/app/src/main/res/layout/pattern_cargo_detail.xml
@@ -218,26 +218,48 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/assignSize" />
 
-            <TextView
-                android:id="@+id/isDone"
+
+
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="0dp"
-                android:layout_centerHorizontal="true"
                 android:layout_below="@id/done_switch"
-                android:background="@drawable/shape_background_rect_white_6"
-                android:backgroundTint="#57C184"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:paddingStart="@dimen/paddingEndEdi"
-                android:paddingTop="@dimen/marginTop5ForLayouts"
-                android:paddingEnd="@dimen/paddingEndEdi"
-                android:paddingBottom="@dimen/marginTop5ForLayouts"
-                android:textSize="@dimen/assignSize"
-                android:text="@string/done"
+                android:gravity="center_horizontal"
                 android:visibility="gone"
-                tools:visibility="visible" />
+                android:id="@+id/done_by_lay"
+                tools:visibility="visible"
+                android:layout_centerHorizontal="true"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/isDone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_background_rect_white_6"
+                    android:backgroundTint="#57C184"
+                    android:textColor="@color/white"
+
+                    android:paddingStart="@dimen/paddingEndEdi"
+                    android:paddingTop="@dimen/marginTop5ForLayouts"
+                    android:paddingEnd="@dimen/paddingEndEdi"
+                    android:paddingBottom="@dimen/marginTop5ForLayouts"
+                    android:textSize="@dimen/assignSize"
+                    android:text="@string/done"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+                <TextView
+                    style="@style/pattern_putaway_smallTv"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/marginTop5ForLayouts"
+                    android:text="@string/done_by" />
+                <TextView
+                    style="@style/pattern_receieve_tv1"
+                    android:id="@+id/done_by"
+                    tools:text="@string/tools_mohammad" />
+
+
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
             <androidx.appcompat.widget.SwitchCompat
                 android:layout_width="wrap_content"
                 app:switchMinWidth="@dimen/_50sdp"
